--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ swfobject.embedSWF = function(url, cont, width, height){
     player.load({ url: url });
 }
 
-swfobject.embedSWF('Duck Life 4.swf', 'ruffle', 500, 500);
+swfobject.embedSWF('Duck Life 4.swf', 'ruffle', 100vh, width:100% );
         </script>
     </body>
 </html>
